# openerp

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
bazel/macos/: BUILD.bazel  app.bzl  defs.bzl  probe.bzl  providers.bzl  transition.bzl  ui_test.bzl
e2e/browser/: BUILD.bazel  dashboard.test.mjs  dashboard_test.go  go.mod  package.json
e2e/browser/src/: main.rs  runner.rs
e2e/flux/swift/: BUILD.bazel
e2e/flux/swift/Sources/: MainTabView.Catalyst.swift  MainTabView.iOS.swift  TwitterFluxApp.swift
e2e/flux/swift/Sources/Bridge/: flux_ffi.h
e2e/flux/swift/Sources/Models/: Models.swift
e2e/flux/swift/UITests/: Info.plist  TwitterFluxUITests.swift
ios/TwitterFlux/: BUILD.bazel  Info.plist
ios/TwitterFlux/Sources/: TwitterFluxApp.swift
ios/TwitterFlux/Sources/Bridge/: FluxBridge.swift  module.modulemap
ios/TwitterFlux/Sources/Models/: Models.swift
ios/TwitterFlux/Sources/Views/: ComposeView.swift  HomeView.swift  InboxView.swift  LoginView.swift  MeView.swift  ProfileView.swift  SearchView.swift  TweetDetailView.swift
ios/TwitterFlux/Tests/: FluxFFITests.swift
ios/TwitterFlux/UITests/: TwitterFluxUITests.swift
rust/lib/api/: BUILD.bazel
rust/lib/api/codegen/: BUILD.bazel  Cargo.toml
rust/lib/api/codegen/src/: ir.rs  ir_v2.rs  main.rs  parser.rs  rust_client.rs  rust_server.rs
rust/lib/api/codegen_lib/: BUILD.bazel  Cargo.toml
rust/lib/api/codegen_lib/src/: lib.rs  react_detail.rs  react_form.rs  react_list.rs  rust_api.rs  rust_model.rs  rust_service.rs  sql.rs  typescript_client.rs  typescript_types.rs
rust/lib/api/codegen_lib/tests/: integration_test.rs
rust/lib/api/ir/: BUILD.bazel
rust/lib/api/ir/src/: db.rs  facet.rs  hierarchy.rs  lib.rs  model.rs  module.rs  types.rs
rust/lib/api/macro/: BUILD.bazel  Cargo.toml
rust/lib/api/macro/src/: codegen.rs  gen_facet.rs  gen_model.rs  gen_persistent.rs  lib.rs  model.rs  parse.rs
rust/lib/api/macro_test/: BUILD.bazel
rust/lib/api/macro_test/src/: lib.rs
rust/lib/api/parser/: BUILD.bazel
rust/lib/api/parser/src/: db_parser.rs  facet_parser.rs  hierarchy_parser.rs  lib.rs  model_parser.rs  util.rs
rust/lib/api/schema/: BUILD.bazel  auth.api  mod.rs
rust/lib/api/schema/auth/: group.rs  mod.rs  policy.rs  provider.rs  role.rs  session.rs  user.rs
rust/lib/api/schema/examples/: character.rs
rust/lib/api/schema/pms/: batch.rs  device.rs  firmware.rs  license.rs  license_import.rs  mod.rs  model.rs  segment.rs
rust/lib/api/schema/task/: mod.rs  task.rs  task_type.rs
rust/lib/api/store/: BUILD.bazel
rust/lib/api/store/src/: admin.rs  kv.rs  lib.rs  schema.rs
rust/lib/api/types/src/: lib.rs
rust/lib/api/validate/: BUILD.bazel
rust/lib/api/validate/src/: lib.rs
rust/lib/blob/: BUILD.bazel
rust/lib/blob/benches/: blob_bench.rs
rust/lib/blob/src/: error.rs  file.rs  lib.rs  traits.rs
rust/lib/core/: BUILD.bazel
rust/lib/core/src/: auth.rs  config.rs  error.rs  lib.rs  module.rs  types.rs
rust/lib/flux/: BUILD.bazel
rust/lib/flux/src/: app.rs  i18n.rs  lib.rs  router.rs  store.rs  trie.rs  value.rs
rust/lib/flux_derive/: BUILD.bazel
rust/lib/flux_derive/src/: handlers.rs  lib.rs  request.rs  state.rs
rust/lib/flux_ffi/: BUILD.bazel
rust/lib/flux_ffi/src/: lib.rs
rust/lib/flux_golden/: BUILD.bazel
rust/lib/flux_golden/bff/src/: i18n_strings.rs  mod.rs
rust/lib/flux_golden/server/src/: facet_handlers.rs  i18n.rs  jwt.rs  mod.rs  store_impls.rs
rust/lib/flux_golden/src/: lib.rs  main.rs
rust/lib/kv/: BUILD.bazel  Cargo.toml
rust/lib/kv/benches/: kv_bench.rs
rust/lib/kv/src/: error.rs  file_loader.rs  lib.rs  overlay.rs  redb.rs  traits.rs
rust/lib/search/: BUILD.bazel
rust/lib/search/benches/: search_bench.rs
rust/lib/search/src/: error.rs  lib.rs  tantivy.rs  traits.rs
rust/lib/sql/: BUILD.bazel
rust/lib/sql/benches/: sql_bench.rs
rust/lib/sql/src/: error.rs  lib.rs  sqlite.rs  traits.rs
rust/lib/tsdb/: BUILD.bazel
rust/lib/tsdb/benches/: tsdb_bench.rs
rust/lib/tsdb/src/: compactor.rs  engine.rs  error.rs  lib.rs  manifest.rs  reader.rs  traits.rs  wal.rs
rust/mod/auth/: BUILD.bazel
rust/mod/auth/dsl/: BUILD.bazel
rust/mod/auth/dsl/hierarchy/: mod.rs
rust/mod/auth/dsl/model/: mod.rs  user.rs
rust/mod/auth/dsl/src/: facet.rs  lib.rs  model.rs  persistent.rs
rust/mod/auth/dsl/ui/: password.rs  url.rs
rust/mod/auth/src/: lib.rs  store_impls.rs
rust/mod/auth/src/api/: check.rs  groups.rs  me.rs  middleware.rs  mod.rs  oauth.rs  policies.rs  providers.rs  roles.rs  users.rs
rust/mod/auth/src/handlers/: mod.rs  policy_check.rs
rust/mod/auth/src/model/: group.rs  mod.rs  policy.rs  provider.rs  role.rs  session.rs  user.rs
rust/mod/auth/src/service/: api.rs  expansion.rs  group.rs  mod.rs  policy.rs  provider.rs  role.rs  schema.rs  session.rs  user.rs
rust/mod/auth_v2/: BUILD.bazel
rust/mod/auth_v2/dsl/model/: group.rs  policy.rs  provider.rs  role.rs  session.rs  user.rs
rust/mod/auth_v2/dsl/ui/: mod.rs  password.rs  permission_picker.rs  textarea.rs  url.rs
rust/mod/auth_v2/src/: lib.rs  store_impls.rs
rust/mod/auth_v2/src/handlers/: mod.rs  policy_check.rs
rust/mod/pms/: BUILD.bazel
rust/mod/pms/dsl/hierarchy/: mod.rs
rust/mod/pms/dsl/model/: batch.rs  device.rs  firmware.rs  license.rs  mod.rs  model.rs  segment.rs  status.rs
rust/mod/pms/dsl/rest/: mfg.rs
rust/mod/pms/src/: lib.rs  store_impls.rs
rust/mod/pms/src/api/: batch.rs  device.rs  device_info.rs  firmware.rs  license.rs  mod.rs  model.rs  sn.rs
rust/mod/pms/src/handlers/: activate.rs  firmware_upload.rs  mod.rs  provision.rs
rust/mod/pms/src/model/: batch.rs  device.rs  firmware.rs  license.rs  license_import.rs  mod.rs  model.rs  segment.rs
rust/mod/pms/src/service/: api.rs  device.rs  device_info.rs  firmware.rs  license.rs  (+4 more)
rust/mod/pms_v2/: BUILD.bazel
rust/mod/pms_v2/src/: lib.rs  store_impls.rs
rust/mod/task/: BUILD.bazel
rust/mod/task/src/: engine.rs  lib.rs  model.rs  store.rs  store_impls.rs  worker.rs
rust/mod/task_v2/: BUILD.bazel
rust/mod/task_v2/src/: lib.rs  store_impls.rs
(+234 files in other folders)
