module(
    name = "openerp",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.68.1")

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Rust crate dependencies (Cargo-free, direct specs)
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Shared
crate.spec(package = "thiserror", version = "2")
crate.spec(package = "serde", version = "1", features = ["derive"])
crate.spec(package = "serde_json", version = "1")
crate.spec(package = "serde_yml", version = "0.0.12")
crate.spec(package = "rand", version = "0.8")
crate.spec(package = "tracing", version = "0.1")
crate.spec(package = "tracing-subscriber", version = "0.3", features = ["env-filter"])
crate.spec(package = "uuid", version = "1", features = ["v4"])
crate.spec(package = "chrono", version = "0.4", features = ["serde"])

# HTTP
crate.spec(package = "axum", version = "0.8")
crate.spec(package = "tokio", version = "1", features = ["full"])
crate.spec(package = "tokio-util", version = "0.7")
crate.spec(package = "async-trait", version = "0.1")

# CLI
crate.spec(package = "anyhow", version = "1")
crate.spec(package = "clap", version = "4.5", features = ["derive"])
crate.spec(package = "toml", version = "0.8")
crate.spec(package = "argon2", version = "0.5")
crate.spec(package = "password-hash", version = "0.5")
crate.spec(package = "tower", version = "0.5", features = ["util"])
crate.spec(package = "rust-embed", version = "8", features = ["axum"])
crate.spec(package = "mime_guess", version = "2")
crate.spec(package = "rpassword", version = "7")

# Proc macro
crate.spec(package = "syn", version = "2.0", features = ["full", "extra-traits"])
crate.spec(package = "quote", version = "1.0")
crate.spec(package = "proc-macro2", version = "1.0")
crate.spec(package = "linkme", version = "0.3")

# KV
crate.spec(package = "redb", version = "2")

# SQL
crate.spec(package = "rusqlite", version = "0.32", features = ["bundled"])

# Search
crate.spec(package = "tantivy", version = "0.22")

# TSDB
crate.spec(package = "zstd", version = "0.13")
crate.spec(package = "crc32fast", version = "1")
crate.spec(package = "parking_lot", version = "0.12")

# Auth
crate.spec(package = "jsonwebtoken", version = "9")
crate.spec(package = "sha2", version = "0.10")
crate.spec(package = "tower-http", version = "0.6", features = ["cors"])
crate.spec(package = "reqwest", version = "0.12", features = ["json", "rustls-tls", "blocking"], default_features = False)
crate.spec(package = "base64", version = "0.22")

# Testing & Benchmarks
crate.spec(package = "tempfile", version = "3")
crate.spec(package = "criterion", version = "0.5", features = ["html_reports"])

# E2E browser tests (Rust + Lightpanda via CDP)
crate.spec(package = "chromiumoxide", version = "0.7", features = ["tokio-runtime"], default_features = False)
crate.spec(package = "futures", version = "0.3")

# Pin: 0.3.37+ needs nightly
crate.spec(package = "time", version = ">=0.3.20, <0.3.37")

crate.from_specs()
use_repo(crate, "crates")

# ── Lightpanda headless browser (for E2E browser tests) ──
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "lightpanda_macos_arm64",
    url = "https://github.com/lightpanda-io/browser/releases/download/nightly/lightpanda-aarch64-macos",
    sha256 = "dcdb1fc6d31eb896cb5d73d595303d71ded6e62065790ccfa86d0ea24e03e60b",
    executable = True,
)

http_file(
    name = "lightpanda_linux_x86_64",
    url = "https://github.com/lightpanda-io/browser/releases/download/nightly/lightpanda-x86_64-linux",
    sha256 = "b887f5a0d746a62e17f2e819473f8bb1adb03308d79641d38cf94026b74229c9",
    executable = True,
)

http_file(
    name = "lightpanda_linux_arm64",
    url = "https://github.com/lightpanda-io/browser/releases/download/nightly/lightpanda-aarch64-linux",
    sha256 = "bff4955690313c76056fe75da91a61edfdfae5a137b46d6f0be8e2a993893031",
    executable = True,
)
