load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "browser_test",
    srcs = ["src/main.rs"],
    edition = "2021",
    # manual: this test starts openerpd + Lightpanda subprocesses and
    # connects via CDP — not suitable for standard CI sandbox (times out).
    # Run explicitly: bazel test //e2e/browser:browser_test
    tags = ["manual", "e2e"],
    deps = [
        "@crates//:chromiumoxide",
        "@crates//:futures",
        "@crates//:reqwest",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
    data = [
        "//rust/bin/openerpd",
        "//rust/bin/openerp",
    ] + select({
        "@platforms//os:macos": ["@lightpanda_macos_arm64//file"],
        "@platforms//os:linux": ["@lightpanda_linux_x86_64//file"],
    }),
    env = {
        "LIGHTPANDA_DISABLE_TELEMETRY": "true",
    },
    size = "large",
)
