load("@rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("//bazel/ios:defs.bzl", "ios_app", "ios_ui_runner")
load("//bazel/ios:probe.bzl", "ios_probe")
load("//bazel/macos:defs.bzl", "macos_app")

swift_library(
    name = "TwitterFluxLib",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "TwitterFlux",
    tags = ["macos", "manual"],
)

ios_probe(
    name = "probe",
    tags = ["macos"],
    deps = [
        ":TwitterFluxLib",
        "//rust/lib/flux_ffi:flux_ffi_static",
    ],
)

swift_library(
    name = "TwitterFluxTestLib",
    srcs = glob(["Sources/**/*.swift"]),
    copts = ["-DTESTING"],
    module_name = "TwitterFlux",
    tags = ["macos", "manual"],
    testonly = True,
)

swift_test(
    name = "FluxFFITests",
    srcs = glob(["Tests/**/*.swift"]),
    tags = ["macos"],
    deps = [
        ":TwitterFluxTestLib",
        "//rust/lib/flux_ffi:flux_ffi_static",
    ],
)

ios_app(
    name = "TwitterFlux",
    app_name = "TwitterFlux",
    bundle_id = "com.haivivi.twitterflux",
    infoplist = "Info.plist",
    tags = ["macos"],
    deps = [
        ":TwitterFluxLib",
        "//rust/lib/flux_ffi:flux_ffi_static",
    ],
)

macos_app(
    name = "TwitterFluxMac",
    app_name = "TwitterFluxMac",
    bundle_id = "com.haivivi.twitterfluxmac",
    infoplist = "Info.plist",
    minimum_os_version = "14.0",
    tags = ["macos"],
    deps = [
        ":TwitterFluxLib",
        "//rust/lib/flux_ffi:flux_ffi_static",
    ],
)

ios_ui_runner(
    name = "UITests",
    app = [":TwitterFlux"],
    app_bundle_id = "com.haivivi.twitterflux",
    tags = ["macos"],
    test_srcs = glob(["UITests/**/*.swift"]),
)
