load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "core",
    crate_name = "oe_core",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "core_test",
    crate = ":core",
)
