load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "flux",
    crate_name = "openerp_flux",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [],
)

rust_test(
    name = "flux_test",
    crate = ":flux",
    deps = [
        "@crates//:tokio",
    ],
)
