load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "flux",
    crate_name = "openerp_flux",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [],
)

rust_test(
    name = "flux_test",
    crate = ":flux",
    deps = [
        "@crates//:tokio",
    ],
)
