load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "flux_golden_test",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    proc_macro_deps = [
        "//rust/lib/dsl/macro",
    ],
    deps = [
        "//rust/lib/flux",
        "//rust/lib/dsl/store",
        "//rust/lib/dsl/types",
        "//rust/lib/core",
        "//rust/lib/kv",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:chrono",
        "@crates//:uuid",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)
