load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "kv",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "@crates//:redb",
        "@crates//:thiserror",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "kv_test",
    crate = ":kv",
    deps = [
        "@crates//:tempfile",
    ],
)
