load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "search",
    crate_name = "openerp_search",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde_json",
        "@crates//:tantivy",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "search_test",
    crate = ":search",
    deps = [
        "@crates//:tempfile",
    ],
)

rust_binary(
    name = "search_bench",
    srcs = ["benches/search_bench.rs"],
    deps = [
        ":search",
        "@crates//:criterion",
        "@crates//:tempfile",
    ],
)
