load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "sql",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "@crates//:rusqlite",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "sql_test",
    crate = ":sql",
    deps = [
        "@crates//:tempfile",
    ],
)
