load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "sql",
    crate_name = "openerp_sql",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:rusqlite",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "sql_test",
    crate = ":sql",
    deps = [
        "@crates//:tempfile",
    ],
)

rust_binary(
    name = "sql_bench",
    srcs = ["benches/sql_bench.rs"],
    deps = [
        ":sql",
        "@crates//:criterion",
    ],
)
