load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "tsdb",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "@crates//:crc32fast",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:zstd",
    ],
)

rust_test(
    name = "tsdb_test",
    crate = ":tsdb",
    deps = [
        "@crates//:tempfile",
    ],
)
