load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "auth",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "//rust/lib/core",
        "//rust/lib/kv",
        "//rust/lib/sql",
        "@crates//:axum",
        "@crates//:base64",
        "@crates//:chrono",
        "@crates//:jsonwebtoken",
        "@crates//:reqwest",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tower-http",
        "@crates//:tracing",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "auth_test",
    crate = ":auth",
    deps = [
        "@crates//:tempfile",
    ],
)
