load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "auth",
    crate_name = "auth",
    srcs = glob(["dsl/**/*.rs", "src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
    visibility = ["//rust:__subpackages__"],
    proc_macro_deps = [
        "//rust/lib/dsl/macro",
    ],
    deps = [
        "//rust/lib/dsl/store",
        "//rust/lib/dsl/types",
        "//rust/lib/core",
        "//rust/lib/kv",
        "@crates//:argon2",
        "@crates//:axum",
        "@crates//:jsonwebtoken",
        "@crates//:chrono",
        "@crates//:password-hash",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "auth_test",
    crate = ":auth",
    deps = [
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tower",
    ],
)
