load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "pms",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "//rust/lib/core",
        "//rust/lib/kv",
        "//rust/lib/sql",
        "//rust/lib/search",
        "//rust/lib/blob",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yml",
        "@crates//:thiserror",
        "@crates//:tracing",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "pms_test",
    crate = ":pms",
)
