load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "pms",
    crate_name = "pms",
    srcs = glob(["dsl/**/*.rs", "src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//rust:__subpackages__"],
    proc_macro_deps = [
        "//rust/lib/dsl/macro",
    ],
    deps = [
        "//rust/lib/dsl/client",
        "//rust/lib/dsl/store",
        "//rust/lib/dsl/types",
        "//rust/lib/core",
        "//rust/lib/kv",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:flatbuffers",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "pms_test",
    crate = ":pms",
    deps = [
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tower",
    ],
)
